--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -981,23 +981,24 @@ StScrollBar StButton#hhandle:active {
     background-gradient-direction: none;
     background-color: transparent;
     border: none;
+    padding: 10px 10px 0px 10px;
+    transition-duration:800ms; 
 }
 
 #dash:desktop {
     color: #eee;
     font-size: 10pt;
-    padding: 4px 0;
+    padding: 10px 10px 0px 10px;
     background-image: none;
     background-color: #313736;
-    border: none;
-    border-radius: 4px 4px 0 0;
-    transition-duration:500ms;
-    box-shadow: 0 1.5px 3px rgba(0, 0, 0, .4);
+    border-image: url("dock-shadow.svg") 20 15 25 15 stretch;
+    transition-duration:800ms;
 }
 
 #dash:rtl {
     border-left: 1px;
     border-right: 0;
+    padding: 10px 10px;	
     border-radius: 4px 0 0 4px;
 }
 
