--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -21,8 +21,8 @@
 
 /* default text style */
 stage {
-    font-family: Noto Sans;
-    font-size: 10pt;
+    font-family: Futura Bk bt, Cantarell, Sans-Serif;
+    font-size: 9pt;
     color: #eee;
 }
 
